--- a/blogpost.html
+++ b/blogpost.html
@@ -6,12 +6,13 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                cabecera
+                Hyperblog
+                <span id="tagline">Tu Blog de Confianza</span>
             </div>
             <div id="post">
                 <h1>Este es el Titulo atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar 
-                    las cosas increibles que se pueden hacer con ramas
+                    las cosas increibles  que se pueden hacer con ramas
                 </p>        
 
             </div>
