Agregado el contenido adicional del blog y una mejor tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,11 @@
                 <p>Y este es el parrafo de inicio donde vamos a explicar 
                     las cosas increibles que se pueden hacer con ramas
                 </p>        
-
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                     Quod, eligendi? Minus molestiae quaerat dolore cupiditate
+                      iure libero, odio officiis quo delectus ipsum quae,
+                       deleniti similique amet dicta aliquam, saepe veritatis.
+                </p>
             </div>
         </div>
     </body>
