--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu Blog de Confianza</span>
+                <span id="tagline">Tu Blog de Cabecera</span>
             </div>
             <div id="post">
                 <h1>Este es el Titulo atractivo e interesante del post</h1>
