--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu Blog de Confianza</span>
+                <span id="tagline">Tu Blog de Maestro</span>
             </div>
             <div id="post">
                 <h1>Este es el Titulo atractivo e interesante del post</h1>
@@ -19,6 +19,7 @@
                       iure libero, odio officiis quo delectus ipsum quae,
                        deleniti similique amet dicta aliquam, saepe veritatis.
                 </p>
+                <p>Suscribete y dale Like</p>
             </div>
         </div>
     </body>
