Cambie el titulo de BlogPost
Porque Puedo...

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Mi post Personal</title>
+        <title>Bienvenido a HyperBlog</title>
         <link rel="stylesheet" href="css/styles.css" />
     </head>
     <body>
