--- a/blogpost.html
+++ b/blogpost.html
@@ -11,9 +11,9 @@
                 <span id="tagline">Tu Blog de Cabecera</span>
             </div>
             <div id="post">
-                <h1>Este es el Título atractivo e interesante del post</h1>
-                <p>Y este es el parrafo de inicio donde vamos a explicar 
-                    las cosas increéibles  que se pueden hacer con ramas
+                <h1>Este es el título atractivo e interesante del post</h1>
+                <p>Y este es el párrafo de inicio donde vamos a explicar 
+                    las cosas increíbles  que se pueden hacer con ramas
                 </p>        
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                      Quod, eligendi? Minus molestiae quaerat dolore cupiditate
