--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
-                <p>Y este es el párrafo de inicio donde vamos a explicar 
+                <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar 
                     las cosas increíbles  que se pueden hacer con ramas
                 </p>        
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
