--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bienvenido a HyperBlog 2.0</title>
+        <title>HyperBlog 2.0 es un blog del Futuro</title>
         <link rel="stylesheet" href="css/styles.css" />
     </head>
     <body>
