--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
                 <span id="tagline">Tu Blog de Cabecera</span>
             </div>
             <div id="post">
-                <h1>Este es el t&iacute;tulo atractivo e interesante del post</h1>
+                <h1>Aqu&iacute; inicia la historia de un gran Proyecto...</h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar 
                     las cosas incre&iacute;bles  que se pueden hacer con ramas
                 </p>        
