Agregue una imagen al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,7 @@
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar 
                     las cosas incre&iacute;bles  que se pueden hacer con ramas
                 </p>        
+                <p><img src="imagenes/equipo.jpg" width="100%"/></p>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                      Quod, eligendi? Minus molestiae quaerat dolore cupiditate
                       iure libero, odio officiis quo delectus ipsum quae,
