--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id="cabecera">
                 <img id="logo" src="imagenes/dragon.png"/>
                 Hyperblog
-                <span id="tagline">Tu Blog de Cabecera</span>
+                <span id="tagline">Tu Blog de Confianza</span>
             </div>
             <div id="post">
                 <h1>Aqu&iacute; inicia la historia de un gran Proyecto...</h1>
